--- a/composer.json
+++ b/composer.json
@@ -10,18 +10,19 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "aws/aws-sdk-php": "^3.336",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.23",
-        "laravel/breeze": "^2.2",
-        "laravel/pail": "^1.1",
-        "laravel/pint": "^1.13",
-        "laravel/sail": "^1.26",
-        "mockery/mockery": "^1.6",
-        "nunomaduro/collision": "^8.1",
-        "phpunit/phpunit": "^11.0.1"
+        "fakerphp/faker": "^v1.24.1",
+        "laravel/breeze": "^v2.3.0",
+        "laravel/pail": "^v1.2.1",
+        "laravel/pint": "^v1.18.3",
+        "laravel/sail": "^v1.39.1",
+        "mockery/mockery": "^1.6.12",
+        "nunomaduro/collision": "^v8.5.0",
+        "phpunit/phpunit": "^11.5.0"
     },
     "autoload": {
         "psr-4": {
