--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "aws-sdk": "^2.1692.0",
+        "combined-stream": "^1.0.8"
     }
 }
